# universal-trust-protocol

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: whitepaper.md
src/: api.py  attestation.py  capabilities.py  crypto_utils.py  dashboard.html  demo.py  identity.py  main.py  registry.py  revocation.py
tests/: conftest.py  test_api.py  test_attestation.py  test_capabilities.py  test_crypto.py  test_identity.py  test_revocation.py
